# bl_iot_sdk_modified

./: .gitattributes  .gitignore  .gitmodules  README.rst
.github/workflows/: build.yml
components/hal_drv/bl602_hal/: bl_adc.c  bl_dac_audio.c  bl_i2c.c  hal_board.c  hal_button.c  hal_ir.c  hal_spi.c  hal_spi.h  hal_sys.c  hal_wifi.c
customer_app/pinedio_blinky/: Makefile  README.md  run.sh
customer_app/pinedio_blinky/pinedio_blinky/: demo.c
customer_app/pinedio_cbor/: Makefile  README.md  run.sh
customer_app/pinedio_cbor/pinedio_cbor/: demo.c
customer_app/pinedio_lorawan/: Makefile  README.md  run.cmd  run.sh
customer_app/pinedio_lorawan/pinedio_lorawan/: demo.c  demo.h  (+3 more)
customer_app/pinedio_st7789/: Makefile  README.md  run.sh
customer_app/pinedio_st7789_bitbang/: Makefile  README.md  run.sh
customer_app/pinedio_st7789_bitbang2/: Makefile  README.md  run.sh
customer_app/pinedio_st7789_bitbang3/: Makefile  README.md  run.sh
customer_app/pinedio_st7789_spi/: Makefile  README.md  run.sh
customer_app/pinedio_tsen/: Makefile  README.md  run.sh
customer_app/sdk_app_adc/: Makefile  run.sh
customer_app/sdk_app_adc2/: Makefile  README.md  run.sh
customer_app/sdk_app_blinky/: Makefile  README.md  run.sh
customer_app/sdk_app_lora/: Makefile  README.md  proj_config.mk  run.cmd  run.sh
customer_app/sdk_app_loraping/: Makefile  README.md  run.sh
customer_app/sdk_app_lorawan/: Makefile  README.md  run.cmd  run.sh
customer_app/sdk_app_rust/: Makefile  README.md  gen-bindings.sh  riscv32imacf-unknown-none-elf.json  riscv64gc-unknown-none-elf.json  run.cmd  run.sh
customer_app/sdk_app_rust_adc/: Makefile  README.md  run.sh
customer_app/sdk_app_rust_gpio/: README.md  run.sh
customer_app/sdk_app_rust_script/: Makefile  README.md  run.sh
customer_app/sdk_app_rust_script/rust/: Cargo.toml
customer_app/sdk_app_rust_script/rust/src/: lib.rs
customer_app/sdk_app_spi/: Makefile  README.md
customer_app/sdk_app_spi_demo/: Makefile  README.md
customer_app/sdk_app_st7789/: Makefile  README.md  run.sh
customer_app/sdk_app_tflite/: Makefile  README.md  run.sh
customer_app/sdk_app_uart_eink/: Makefile  README.md  run.sh
customer_app/sdk_app_ulisp/: Makefile  README.md  run.sh
make_scripts_riscv/: component_wrapper.mk
(+113 files in other folders)
